# OPTALG

./: .gitignore  .travis.yml  CHANGELOG.md  MANIFEST.in  README.md  build_lib.bat  build_lib.sh  clean.bat  clean.sh  clean_py.bat  clean_py.sh  requirements.txt  setup.py  tox.ini
docs/: conf.py  defs.hrst  index.rst  opt_solver.rst  reference.rst  start.rst
examples/: linear.py  mixintlinear.py  quadratic.py
lib/cmakelist_suitesparse_entry/: CMakeLists.txt  build_lib.bat  clean.bat
lib/cmaklists_suitesparse_amd/: CMakeLists.txt
lib/cmaklists_suitesparse_btf/: CMakeLists.txt
lib/cmaklists_suitesparse_colamd/: CMakeLists.txt
lib/cmaklists_suitesparse_config/: CMakeLists.txt
lib/cmaklists_suitesparse_csparse/: CMakeLists.txt
lib/cmaklists_suitesparse_klu/: CMakeLists.txt
optalg/lin_solver/: __init__.py  klu.py  lin_solver.py  mumps.py  superlu.py  umfpack.py
optalg/lin_solver/_klu/: __init__.py  klu.pxd  klu.pyx
optalg/lin_solver/_mumps/: __init__.py  _dmumps.pyx
optalg/opt_solver/: augl.py  cbc.py  cbc_cmd.py  clp.py  clp_cmd.py  cplex_cmd.py  inlp.py  ipopt.py  iqp.py  nr.py  opt_solver.py  opt_solver_error.py  problem.py  problem_error.py  problem_lin.py  problem_mixintlin.py  problem_quad.py  utils.py
optalg/opt_solver/_cbc/: ccbc.pxd  ccbc.pyx
optalg/opt_solver/_clp/: cclp.pyx
optalg/opt_solver/_ipopt/: __init__.py  cipopt.pxd  cipopt.pyx
tests/: test_lin_solvers.py  test_opt_solvers.py
